--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     
 </head>
 <body>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
+
+    <div id="display-result"></div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
